--- a/style.css
+++ b/style.css
@@ -490,5 +490,166 @@ nav {
 }
 
 .footer__socials {
-    display: ;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+}
+
+.footer__socials a{
+    padding: 5px 10px;
+    font-size: 1.2rem;
+    color: var(--text-light);
+    border-radius: 100%;
+    border: 1px solid var(--text-light);
+}
+
+.footer__socials a:hover{
+    color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.footer__col h4{
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    font-weight: ;
+    color: var(--text-dark);
+}
+
+.footer__links a{
+    display: block;
+    margin-bottom: 1rem;
+    color: var(--text-light);
+}
+
+.footer__links a:hover{
+    color: var(--primary-color);
+}
+
+.footer__bar{
+    padding: 1rem;
+    font-size: 0.8rem;
+    color: var(--text-light);
+    text-align: center;
+}
+
+
+@media(width > 480px) {
+    .class__grid{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem 1rem;
+    }
+
+    .trainer__grid{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+
+    .trainer__card:nth-child(3) {
+        grid-area: 2/2/3/3;
+    }
+
+    .price__grid{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem 1rem;
+    }
+
+    .footer__container{
+        grid-template-columns: 2fr 1fr;
+    }
+}
+
+@media (width > 768px) {
+    nav{
+        position: static;
+        padding: 2rem 1rem;
+        max-width: var(--max-width);
+        margin-inline: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    .nav__header{
+        padding: 0;
+        background-color: transparent;
+
+    }
+
+    .nav__menu__btn{
+        display: none;
+    }
+
+    .nav__links{
+        position: static;
+        padding: 0;
+        flex-direction: row;
+        background-color: transparent;
+        transform: none;
+    }
+
+    .header__container{
+        padding-block:0;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+    }
+
+    .header__content{
+        padding-block: 5rem;
+        grid-area: 1/1/2/2;
+    }
+
+    .about__container{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+    }
+
+    .about__grid{
+        gap: 3rem;
+    }
+
+    .class__grid{
+        grid-template-columns: repeat(4,1fr);
+    }
+
+    .trainer__grid{
+        grid-template-columns: repeat(3,1fr);
+
+    }
+
+    .trainer__card:nth-child(3) {
+        grid-area: unset;
+    }
+
+    .trainer__content{
+        padding: 2rem;
+    }
+
+    .price__grid{
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    .footer__container{
+        grid-template-columns: repeat(5,1fr);
+    }
+
+    .footer__col:first-child {
+        grid-column: 1/3;
+    }
+
+}
+
+@media (width > 1024px) {
+    .class__grid{
+        gap: 2rem;
+    }
+
+    .price__grid{
+        gap: 2rem;
+    }
+
+    .price__card{
+        padding: 2rem;
+    }
 }
